--- a/mindup/templates/meetings.html
+++ b/mindup/templates/meetings.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Встречи</title>
-    <link rel="stylesheet" href="meetings.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="modals_main.css">
     <link rel="stylesheet" href="blocks.css">
     <link rel="stylesheet" href="meetings_blocks.css">
-    <link rel="stylesheet" href="modals_main.css">
+    <link rel="stylesheet" href="meetings.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="meetings_modal_add.css">
     <link rel="stylesheet" href="meetings_modal_info.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
@@ -64,7 +64,7 @@
                 <label class="name-input-label">
                     <input type="text" name="name" placeholder="Введите название встречи" maxlength="35" required>
                 </label>
-                <div class="modal-add-content-wrapper">
+                <div class="modal-content-wrapper">
                     <div class="tags">
                         <p class="tags-add-hint">Добавить тег</p>
                         <div class="tag" id="addTag">+</div>
@@ -110,7 +110,7 @@
                     <div class="place">Online</div>
                 </div>
                 <div class="groupNameInfo"></div>
-                <div class="modal-add-content-wrapper">
+                <div class="modal-content-wrapper">
                     <div class="tags">
                         <div class="tag">#123</div>
                     </div>
