--- a/mindup/static/registration.css
+++ b/mindup/static/registration.css
@@ -5,8 +5,13 @@
 
     .login-container {
         width: 80%;
-
-        height: 100%;
         box-shadow: none;
+        margin: auto 0;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .login-container {
+        width: 100%;
     }
 }
