--- a/mindup/templates/meetings.html
+++ b/mindup/templates/meetings.html
@@ -86,7 +86,7 @@
                             Ограничить количество участников
                         </label>
                         <label>
-                            <input type="number" name="max_members_number" placeholder="0" min=2 id="member_limit" disabled>
+                            <input type="number" name="max_members_number" placeholder="0" min=2 max=99999 id="member_limit" disabled>
                         </label>
                     </div>
                     <label>
