--- a/mindup/static/meetings_modal_add.css
+++ b/mindup/static/meetings_modal_add.css
@@ -1,3 +1,7 @@
+.modal-view.add .modal-content-wrapper {
+    margin-top: 30px;
+}
+
 .name-input-label::after {
     content: "До 35 символов";
 }
@@ -19,17 +23,9 @@
     display: none;
 }
 
-
-.modal-content-wrapper {
-    width: 560px;
-    height: 360px;
-    padding-left: 40px;
-    margin-top: 30px;
-}
-
-.modal-view .tags {
+.modal-view.add .tags {
     width: 520px;
-    gap: 7px
+    gap: 7px;
 }
 
 .modal-view .tags-add-hint {
@@ -136,6 +132,112 @@
     opacity: 0;
 }
 
+.modal-view.add .button-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 380px;
+}
 
+.modal-view.add button {
+    margin-top: 20px;
+}
+
+
+@media screen and (max-width: 1400px) {
+    .modal-wrapper.add .modal-view {
+        height: 70%;
+    }
+}
+
+
+@media screen and (max-width: 680px) {
+    .modal-wrapper.add {
+        .modal-view {
+            width: 500px;
+        }
+
+        .name-input-label input[type="text"] {
+            width: 420px;
+        }
+
+        .modal-content-wrapper {
+            width: 480px;
+            overflow-x: hidden;
+            padding: 0 0 0 30px;
+        }
+
+        .tags {
+            width: 450px;
+        }
+
+        .members-limit {
+            gap: 25px;
+        }
+
+        .datetime-place-info {
+            flex-direction: column;
+            width: 450px;
+            gap: 10px;
+        }
+
+        textarea {
+            width: 400px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .modal-wrapper.add {
+        .modal-view {
+            width: 290px;
+            padding: 15px 25px 25px 10px;
+        }
+
+        .name-input-label input[type="text"] {
+            width: 240px;
+        }
+
+        .modal-content-wrapper {
+            width: 270px;
+            overflow-x: hidden;
+            padding: 0 0 0 30px;
+        }
+
+        .tags {
+            width: 250px;
+        }
+
+        .members-limit {
+            gap: 5px;
+            flex-direction: column;
+            align-items: start;
+        }
+
+        .datetime-place-info {
+            flex-direction: column;
+            width: 240px;
+            gap: 10px;
+        }
+
+        textarea {
+            width: 200px;
+        }
+
+        .reloadImage {
+            top: 7px;
+            right: -15px;
+        }
+
+        button {
+            width: 130px;
+            margin-top: 20px;
+        }
+
+        .button-wrapper {
+            margin-left: 15px;
+            width: 290px;
+        }
+    }
+}
 
 
