--- a/mindup/templates/groups.html
+++ b/mindup/templates/groups.html
@@ -59,7 +59,7 @@
                     <h3>Заменить изображение</h3>
                     <input type="file" id="group-image-upload" name="image" accept="image/jpeg, image/png">
                 </label>
-                <div style="display: flex; justify-content: space-between; width: 380px">
+                <div class="button-wrapper">
                     <button type="button" onclick="closeModal()" style="background: rgb(171,171,171);">Отмена</button>
                     <button type="submit">Создать</button>
                 </div>
