--- a/mindup/static/groups_modal_add.css
+++ b/mindup/static/groups_modal_add.css
@@ -1,81 +1,5 @@
-.modal-wrapper {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 1050;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity 200ms ease-in;
-}
-
-.modal-blackout {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(9, 9, 9, 0.53);
-}
-
-.modal-view {
-    position: fixed;
-    padding: 30px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #EFFFD5;
-    width: 600px;
-    height: 420px;
-    border-radius: 20px;
-}
-
-.modal-view form {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.modal-view input[type="text"] {
-    width: 500px;
-    height: 40px;
-    padding: 0 10px;
-    background: #ffffff;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    box-shadow: 0 3px 5px rgba(42, 42, 42, 0.2); /* гориз,  верт смещение, размытие, цвет */;
-    text-align: center;
-    font-size: 1.3em;
-
-}
-
-.modal-view input[type="text"]::placeholder {
-    text-align: center;
-    transition: all 0.2s ease;
-}
-
-.modal-view input[type="text"]:focus::placeholder {
-    opacity: 0;
-}
-
-.name-input-label {
-    position: relative;
-}
-
 .name-input-label::after {
-    margin-top: 5px;
-    height: 20px;
     content: "До 18 символов";
-    color: #424242;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    font-family: Fira, sans-serif;
-    font-weight: normal;
-    font-size: 0.9em;
 }
 
 .modal-view input[type="file"] {
@@ -117,15 +41,64 @@
     box-shadow: 0 3px 10px rgba(19, 19, 19, 0.63);
 }
 
-.modal-view button {
-    height: 40px;
-    width: 170px;
+@media screen and (max-width: 1200px) {
+    .modal-wrapper .modal-view {
+        height: 80%;
+    }
 
-    background: #038C00;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 1.3em;
-    border-radius: 20px;
-    border: none;
-    outline: none;
+    .modal-wrapper .custom-image-upload {
+        width: 300px;
+        height: 200px;
+    }
 }
+
+
+@media screen and (max-width: 800px) {
+    .modal-wrapper .modal-view {
+        width: 500px;
+    }
+
+    .modal-wrapper .name-input-label input[type="text"] {
+        width: 420px;
+    }
+
+    .modal-wrapper .custom-image-upload {
+        width: 255px;
+        height: 170px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .modal-wrapper .modal-view {
+        height: 320px;
+        width: 290px;
+    }
+
+    .modal-wrapper .name-input-label input[type="text"] {
+        width: 240px;
+    }
+
+
+    .modal-wrapper button {
+        width: 130px;
+        margin-top: 20px;
+    }
+
+    .modal-wrapper .button-wrapper {
+        margin-left: 15px;
+        width: 290px;
+    }
+}
+
+@media screen and (max-height: 300px) {
+    .modal-wrapper .modal-view {
+        height: 80%;
+    }
+
+    .modal-wrapper .custom-image-upload {
+        width: 180px;
+        height: 120px;
+    }
+}
+
+
