--- a/mindup/templates/groups.html
+++ b/mindup/templates/groups.html
@@ -21,7 +21,7 @@
             <div class="search">
                 <form>
                     <label>
-                        <input type="text" placeholder="Поиск" id="searchInput" onkeypress="handleKeyPress(event)">
+                        <input type="text" placeholder="Поиск" id="searchTextInput" onkeypress="handleKeyPress(event)">
                     </label>
                     <button type="button" class="searchButton" onclick="searchInGroups()">
                         <img src="site_images/search.svg" alt="search" width="21px">
@@ -53,7 +53,7 @@
         <div class="modal-view">
             <form action="/api/send_group" method="post" enctype="multipart/form-data">
                 <label class="name-input-label">
-                    <input type="text" name="title" placeholder="Название группы" maxlength="18" required>
+                    <input type="text" name="title" placeholder="Название группы" maxlength="18" pattern="\w+.*" required>
                 </label>
                 <label for="group-image-upload" class="custom-image-upload">
                     <h3>Заменить изображение</h3>
