--- a/mindup/templates/groups.html
+++ b/mindup/templates/groups.html
@@ -53,7 +53,7 @@
         <div class="modal-view">
             <form action="/api/send_group" method="post" enctype="multipart/form-data">
                 <label class="name-input-label">
-                    <input type="text" name="title" placeholder="Название группы" maxlength="18" pattern="\w+.*" required>
+                    <input type="text" name="title" placeholder="Название группы" maxlength="18" pattern="[\wА-Яа-я]+.*" required>
                 </label>
                 <label for="group-image-upload" class="custom-image-upload">
                     <h3>Заменить изображение</h3>
