--- a/mindup/static/meetings_modal_add.css
+++ b/mindup/static/meetings_modal_add.css
@@ -47,7 +47,7 @@
     background-color: #026228;
 }
 
-.modal-view .modal-content-wrapper .tag {
+.modal-view.add .modal-content-wrapper .tag {
     width: 100px;
 }
 
